--- a/donut3.html
+++ b/donut3.html
@@ -56,16 +56,16 @@
     .wrap::before {
       content: "";
       position: absolute;
-      inset: 15%;
+      inset: 10%;
       border-radius: 50%;
       box-shadow: 
-        0 0 40px 10px rgba(255, 255, 255, 0.15),
-        0 0 80px 30px rgba(255, 255, 255, 0.1),
-        0 0 120px 50px rgba(255, 255, 255, 0.05);
-      animation: whiteFlow 4s ease-in-out infinite alternate;
+        0 0 100px 40px rgba(255, 255, 255, 0.18),
+        0 0 200px 80px rgba(255, 255, 255, 0.12),
+        0 0 300px 140px rgba(255, 255, 255, 0.08);
+      animation: whiteFlow 7s ease-in-out infinite alternate;
       z-index: 1; /* alacsonyabb, mint az img (img z-index:2), így a glow a kép alatt lesz */
       pointer-events: none;
-      transition: opacity 0.4s ease;
+      transition: opacity 0.001s ease;
     }
 
     .wrap.hide-glow::before {
@@ -75,15 +75,15 @@
     @keyframes whiteFlow {
       0% {
         box-shadow:
-          0 0 40px 10px rgba(255, 255, 255, 0.15),
-          0 0 80px 30px rgba(255, 255, 255, 0.1),
-          0 0 120px 50px rgba(255, 255, 255, 0.05);
+          0 0 100px 40px rgba(255, 255, 255, 0.18),
+          0 0 200px 80px rgba(255, 255, 255, 0.12),
+          0 0 300px 140px rgba(255, 255, 255, 0.08);
       }
       100% {
         box-shadow:
-          0 0 70px 20px rgba(255, 255, 255, 0.3),
-          0 0 140px 50px rgba(255, 255, 255, 0.15),
-          0 0 200px 80px rgba(255, 255, 255, 0.1);
+          0 0 160px 60px rgba(255, 255, 255, 0.25),
+          0 0 280px 120px rgba(255, 255, 255, 0.15),
+          0 0 400px 200px rgba(255, 255, 255, 0.1);
       }
     }
 
@@ -464,7 +464,11 @@ createStars();
     }
 
     buildLegend();
+    legend.style.marginBottom = '40px';
     resize();
+    document.body.insertAdjacentHTML('beforeend','<div id="chart-tip" style="position:fixed;bottom:10px;right:10px;background:rgba(255,255,255,0.1);padding:6px 10px;border-radius:10px;font-size:15px;font-weight:500;color:#fff;backdrop-filter:blur(4px);z-index:10;">Tipp: A fánkon az egérrel végighúzva jelennek meg a költségvetési diagram szeletei</div>');
+
+
   </script>
 </body>
 </html>
