--- a/donut3.html
+++ b/donut3.html
@@ -194,11 +194,11 @@
   {
     "totalFunds": 500000,
     "slices": [
-      {"label":"Rész 1","amount":150000},
-      {"label":"Rész 2","amount":100000},
-      {"label":"Rész 3","amount":50000},
-      {"label":"Rész 4","amount":125000},
-      {"label":"Rész 5","amount":75000}
+      {"label":"Utiköltség","amount":319000},
+      {"label":"Vidámpark","amount":118000},
+      {"label":"Tömegközlekedés","amount": 45000},
+      {"label":"Ellátmány","amount":18000},
+      {"label":"Fennmaradó összeg","amount":0}
     ]
   }
   </script>
