--- a/donut3.html
+++ b/donut3.html
@@ -194,10 +194,10 @@
   {
     "totalFunds": 500000,
     "slices": [
-      {"label":"Utiköltség","amount":336000},
-      {"label":"Vidámpark","amount":67200},
-      {"label":"Tömegközlekedés","amount": 26180},
-      {"label":"Ellátmány","amount":67200},
+      {"label":"Utiköltség és Tömegközlekedés","amount":204400},
+      {"label":"Vidámpark","amount":70000},
+      {"label":"Visszaút","amount": 145600},
+      {"label":"Ellátmány","amount":70000},
       {"label":"Fennmaradó összeg","amount":0}
     ]
   }
