--- a/donut3.html
+++ b/donut3.html
@@ -5,6 +5,58 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Interaktív kördiagram – infóval és animációval</title>
   <style>
+ .next-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+      margin-bottom: 40px;
+      position: relative;
+      z-index: 1; /* a donut és a legend alatt marad */
+    }
+
+    #nextButton {
+      background: transparent;
+      border: 2px solid white;
+      color: white;
+      font-size: 17px;
+      font-weight: 600;
+      padding: 10px 28px;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: all 0.25s ease;
+    }
+
+    #nextButton:hover {
+      background: white;
+      color: black;
+      transform: scale(1.05);
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.4);
+    }
+#nextButton {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.12);
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      color: #fff;
+      font-size: 16px;
+      font-weight: 500;
+      padding: 10px 26px;
+      border-radius: 12px;
+      backdrop-filter: blur(6px);
+      cursor: pointer;
+      transition: all 0.25s ease;
+      z-index: 100;
+    }
+
+    #nextButton:hover {
+      background: rgba(255, 255, 255, 0.22);
+      transform: translateX(-50%) scale(1.05);
+      box-shadow: 0 0 15px rgba(255,255,255,0.3);
+    }
     /* ⭐ Háttér csillagok */
 .stars {
   position: absolute;
@@ -211,6 +263,7 @@
 <body>
     <div class="stars" id="stars"></div>
     <div class="fade-overlay" id="fade"></div>
+    <button id="nextButton">Tovább</button>
 
 
 
@@ -221,11 +274,11 @@
   {
     "totalFunds": 500000,
     "slices": [
-      {"label":"Utiköltség és Tömegközlekedés","amount":204400},
-      {"label":"Vidámpark","amount":70000},
-      {"label":"Visszaút","amount": 145600},
-      {"label":"Ellátmány","amount":70000},
-      {"label":"Fennmaradó összeg","amount":0}
+      {"label":"Odaút","amount":92970},
+      {"label":"Vidámpark","amount":46590},
+      {"label":"Visszaút","amount": 122710},
+      {"label":"Ellátmány","amount":181870},
+      {"label":"Tömegközlekedés","amount":55860}
     ]
   }
   </script>
@@ -239,6 +292,7 @@
   </div>
 
   <div class="legend" id="legend"></div>
+   
 
   <script>
     // 🌟 Csillagok generálása
@@ -517,7 +571,9 @@ ctx.strokeStyle = 'rgba(255,255,255,0.1)';
 ctx.lineWidth = 2;
 ctx.stroke();
 
-
+    document.getElementById('nextButton').addEventListener('click', () => {
+      window.location.href = 'afterdonut.html';
+    });
 
   </script>
 </body>
