--- a/afterdonut.html
+++ b/afterdonut.html
@@ -20,7 +20,6 @@
       position:relative;
     }
 
-    /* Háttér csillagok */
     .stars{
       position:absolute;
       inset:0;
@@ -41,21 +40,18 @@
       0%, 100% { opacity:0.2; transform:scale(0.8); }
       50% { opacity:1; transform:scale(1.2); }
     }
-    /* Fade out réteg */
-  .fade-overlay {
-    position: fixed;
-    inset: 0;
-    background: black;
-    opacity: 0;
-    pointer-events: none;
-    z-index: 999;
-    transition: opacity 1.5s ease-in;
-}
-.fade-overlay.active {
-    opacity: 1;
-}
 
-    /* Szöveg animációs képernyő */
+    .fade-overlay {
+      position: fixed;
+      inset: 0;
+      background: black;
+      opacity: 0;
+      pointer-events: none;
+      z-index: 999;
+      transition: opacity 1.5s ease-in;
+    }
+    .fade-overlay.active { opacity: 1; }
+
     .display-wrap{
       pointer-events:none;
       position:absolute;
@@ -81,41 +77,62 @@
       word-break:normal;
       filter: drop-shadow(0 0 4px rgba(255,255,255,0.6)) drop-shadow(0 0 8px rgba(120,180,255,0.5));
     }
-    .word{
-      display:inline-flex;
-      white-space:nowrap;
-      margin-right:0.35em; /* kis szóköz */
-    }
-    .char{
-      opacity:0;
-      display:inline-block;
-      transform:translateY(8px);
-      transition:opacity 240ms ease, transform 260ms cubic-bezier(.2,.9,.3,1);
-    }
-    .char.visible{
-      opacity:1;
-      transform:translateY(0)
-    }
+    .word{ display:inline-flex; white-space:nowrap; margin-right:0.35em; }
+    .char{ opacity:0; display:inline-block; transform:translateY(8px);
+           transition:opacity 240ms ease, transform 260ms cubic-bezier(.2,.9,.3,1);}
+    .char.visible{ opacity:1; transform:translateY(0); }
+
+    /* 🎊 Konfetti stílusok */
+ .confetti {
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  border-radius: 2px;
+  opacity: 1;
+  animation: confetti-fall ease-in-out forwards;
+  z-index: 9999;
+}
+
+/* Finom, parabola-szerű mozgás: felfelé indul, majd lassulva esik */
+@keyframes confetti-fall {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+    opacity: 1;
+  }
+  20% {
+    transform: translate(calc(var(--xMove) * 0.4), calc(var(--yMove) * 1.1)) rotate(180deg);
+  }
+  50% {
+    transform: translate(calc(var(--xMove) * 0.7), calc(var(--yMove) * 0.6)) rotate(360deg);
+  }
+  80% {
+    transform: translate(calc(var(--xMove) * 1.0), calc(var(--yMove) * -0.1)) rotate(540deg);
+  }
+  100% {
+    transform: translate(calc(var(--xMove) * 1.1), 100vh) rotate(720deg);
+    opacity: 0;
+  }
+}
+
+
+
   </style>
 </head>
 <body>
   <div class="stars" id="stars"></div>
   <div class="fade-overlay" id="fade"></div>
-
-
   <div class="display-wrap" id="intro">
     <div id="display" class="line" aria-live="polite"></div>
   </div>
 
   <script>
    const lines = [
-  "Ha önök nem is éheztek meg a látványtól, mi bizony igen!",
-  "Egy jó bécsi fánk...",
-  "De jó is lenne!",
-  "...",
-  "Remélem tetszett önöknek a 10.c előadása"
-  
-];
+      "Ha önök nem is éheztek meg a látványtól, mi bizony igen!",
+      "Egy jó bécsi fánk...",
+      "De jó is lenne!",
+      "...",
+      "Remélem tetszett önöknek a 10.c előadása"
+    ];
 
     const display = document.getElementById('display');
     const intro = document.getElementById('intro');
@@ -124,7 +141,6 @@
     let currentTimerIds = [];
     let currentIndex = 0;
 
-    // Csillagok generálása
     function createStars(count = 150) {
       for(let i=0; i<count; i++){
         const s = document.createElement('div');
@@ -156,23 +172,18 @@
         const wordSpan = document.createElement('span');
         wordSpan.className = 'word';
         display.appendChild(wordSpan);
-
-        // minden betű külön karakter span
         for (let i = 0; i < word.length; i++) {
           const ch = word[i];
           const charEl = document.createElement('span');
           charEl.className = 'char';
           charEl.textContent = ch;
           wordSpan.appendChild(charEl);
-
           const delay = totalDelay;
-          const id = setTimeout(() => {
-            charEl.classList.add('visible');
-          }, delay);
+          const id = setTimeout(() => charEl.classList.add('visible'), delay);
           currentTimerIds.push(id);
           totalDelay += perChar;
         }
-        totalDelay += 100; // kis szünet szóköz után
+        totalDelay += 100;
       });
 
       const total = totalDelay + 400;
@@ -181,32 +192,70 @@
     }
 
     function playSequence(){
-  if(!isPlaying) return;
-  if(currentIndex >= lines.length){
-    isPlaying = false;
-    setTimeout(()=>{
-      intro.classList.add('hidden');
+      if(!isPlaying) return;
+      if(currentIndex >= lines.length){
+        isPlaying = false;
+        setTimeout(()=>{
+          intro.classList.add('hidden');
+          const fade = document.getElementById('fade');
+          fade.classList.add('active');
+          setTimeout(()=>{ window.location.href = "donut3.html"; }, 1800);
+        }, 1000);
+        return;
+      }
 
-      // 🔥 Fade out animáció kezdete
-      const fade = document.getElementById('fade');
-      fade.classList.add('active');
+      const text = lines[currentIndex];
+      showLine(text, ()=>{
+        // Ha az utolsó sor jön:
+        if(currentIndex === lines.length - 1){
+          triggerConfetti(); // 🎊 konfetti durranás
+          setTimeout(()=>{
+            isPlaying = false;
+            // 5 másodperc után váltás
+            const fade = document.getElementById('fade');
+            fade.classList.add('active');
+            setTimeout(()=>{ window.location.href = "donut3.html"; }, 1800);
+          }, 5000);
+          return;
+        }
+        setTimeout(()=>{
+          currentIndex++;
+          playSequence();
+        }, 1000);
+      });
+    }
+//Confetiiii
+  function triggerConfetti(){
+  const colors = ['#FFD700', '#FF6B6B', '#7FB3D5']; // citromsárga, fakópiros, fakókék
+  const confettiCount = 120;
 
-      // Várunk míg elsötétül, aztán váltunk
-      setTimeout(()=>{
-        window.location.href = "donut3.html";
-      }, 1800); // 1.8s után váltás
-    }, 1000);
-    return;
+  for(let i=0;i<confettiCount;i++){
+    const c = document.createElement('div');
+    c.className = 'confetti';
+    c.style.background = colors[Math.floor(Math.random()*colors.length)];
+    c.style.animationDuration = (3 + Math.random()*2) + 's';
+    c.style.opacity = '1';
+    c.style.filter = 'brightness(1.3)';
+
+    const fromLeft = i < confettiCount / 2;
+    if(fromLeft){
+      c.style.left = '0';
+      c.style.bottom = '0';
+      c.style.setProperty('--xMove', (Math.random()*60 + 20) + 'vw');
+    } else {
+      c.style.right = '0';
+      c.style.bottom = '0';
+      c.style.setProperty('--xMove', '-' + (Math.random()*60 + 20) + 'vw');
+    }
+
+    // indul felfelé, de a gravitáció lehúzza majd
+    c.style.setProperty('--yMove', '-' + (Math.random()*40 + 20) + 'vh');
+
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(), 5500);
   }
-
-  const text = lines[currentIndex];
-  showLine(text, ()=>{
-    setTimeout(()=>{
-      currentIndex++;
-      playSequence();
-    }, 1000);
-  });
 }
+
 
 
     function startIntro(){
