--- a/afterdonut.html
+++ b/afterdonut.html
@@ -20,32 +20,42 @@
       position:relative;
     }
 
-    .stars{
-      position:absolute;
-      inset:0;
-      overflow:hidden;
-      z-index:0;
-      background:transparent;
+    /* 🌌 Csillagos háttér – mozog lassan */
+    .stars {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: transparent url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
+      animation: moveStars 60s linear infinite;
+      z-index: 0;
+      opacity: 0.5;
     }
-    .star{
-      position:absolute;
-      width:2px;
-      height:2px;
-      background:white;
-      border-radius:50%;
-      opacity:0.8;
-      animation: twinkle 3s infinite ease-in-out;
+
+    @keyframes moveStars {
+      from { transform: translate(0, 0); }
+      to { transform: translate(-50%, -50%); }
     }
-    @keyframes twinkle {
-      0%, 100% { opacity:0.2; transform:scale(0.8); }
-      50% { opacity:1; transform:scale(1.2); }
+
+    /* 🏞 Háttérkép – a csillagok fölött, de a konfetti és szöveg mögött */
+    .bg {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: url('background.png') bottom center / cover no-repeat;
+      z-index: 1;
+      opacity: 200%;
+      pointer-events: none;
     }
 
     .fade-overlay {
       position: fixed;
       inset: 0;
       background: black;
-      opacity: 0;
+      opacity: 0%;
       pointer-events: none;
       z-index: 999;
       transition: opacity 1.5s ease-in;
@@ -83,43 +93,43 @@
     .char.visible{ opacity:1; transform:translateY(0); }
 
     /* 🎊 Konfetti stílusok */
- .confetti {
-  position: fixed;
-  width: 8px;
-  height: 8px;
-  border-radius: 2px;
-  opacity: 1;
-  animation: confetti-fall ease-in-out forwards;
-  z-index: 9999;
-}
+    .confetti {
+      position: fixed;
+      width: 8px;
+      height: 8px;
+      border-radius: 2px;
+      opacity: 1;
+      animation: confetti-fall ease-in-out forwards;
+      z-index: 9999;
+    }
 
-/* Finom, parabola-szerű mozgás: felfelé indul, majd lassulva esik */
-@keyframes confetti-fall {
-  0% {
-    transform: translate(0, 0) rotate(0deg);
-    opacity: 1;
-  }
-  20% {
-    transform: translate(calc(var(--xMove) * 0.4), calc(var(--yMove) * 1.1)) rotate(180deg);
-  }
-  50% {
-    transform: translate(calc(var(--xMove) * 0.7), calc(var(--yMove) * 0.6)) rotate(360deg);
-  }
-  80% {
-    transform: translate(calc(var(--xMove) * 1.0), calc(var(--yMove) * -0.1)) rotate(540deg);
-  }
-  100% {
-    transform: translate(calc(var(--xMove) * 1.1), 100vh) rotate(720deg);
-    opacity: 0;
-  }
-}
-
-
+    @keyframes confetti-fall {
+      0% {
+        transform: translate(0, 0) rotate(0deg);
+        opacity: 1;
+      }
+      20% {
+        transform: translate(calc(var(--xMove) * 0.4), calc(var(--yMove) * 1.1)) rotate(180deg);
+      }
+      50% {
+        transform: translate(calc(var(--xMove) * 0.7), calc(var(--yMove) * 0.6)) rotate(360deg);
+      }
+      80% {
+        transform: translate(calc(var(--xMove) * 1.0), calc(var(--yMove) * -0.1)) rotate(540deg);
+      }
+      100% {
+        transform: translate(calc(var(--xMove) * 1.1), 100vh) rotate(720deg);
+        opacity: 0;
+      }
+    }
 
   </style>
 </head>
 <body>
-  <div class="stars" id="stars"></div>
+  <!-- 🌠 Háttér rétegek -->
+  <div class="stars"></div>
+  <div class="bg"></div>
+
   <div class="fade-overlay" id="fade"></div>
   <div class="display-wrap" id="intro">
     <div id="display" class="line" aria-live="polite"></div>
@@ -136,23 +146,9 @@
 
     const display = document.getElementById('display');
     const intro = document.getElementById('intro');
-    const stars = document.getElementById('stars');
     let isPlaying = false;
     let currentTimerIds = [];
     let currentIndex = 0;
-
-    function createStars(count = 150) {
-      for(let i=0; i<count; i++){
-        const s = document.createElement('div');
-        s.className = 'star';
-        s.style.top = Math.random()*100 + '%';
-        s.style.left = Math.random()*100 + '%';
-        s.style.animationDelay = (Math.random()*5)+'s';
-        s.style.opacity = Math.random()*0.8+0.2;
-        stars.appendChild(s);
-      }
-    }
-    createStars();
 
     function clearTimers(){
       currentTimerIds.forEach(id=>clearTimeout(id));
@@ -168,7 +164,7 @@
       const initialDelay = 200;
       let totalDelay = initialDelay;
 
-      words.forEach((word, wordIndex) => {
+      words.forEach((word) => {
         const wordSpan = document.createElement('span');
         wordSpan.className = 'word';
         display.appendChild(wordSpan);
@@ -206,15 +202,13 @@
 
       const text = lines[currentIndex];
       showLine(text, ()=>{
-        // Ha az utolsó sor jön:
         if(currentIndex === lines.length - 1){
-          triggerConfetti(); // 🎊 konfetti durranás
+          triggerConfetti();
           setTimeout(()=>{
             isPlaying = false;
-            // 5 másodperc után váltás
             const fade = document.getElementById('fade');
             fade.classList.add('active');
-            setTimeout(()=>{ window.location.href = "donut3.html"; }, 1800);
+            setTimeout(()=>{ window.location.href = "bucsuzo.html"; }, 1800);
           }, 5000);
           return;
         }
@@ -224,39 +218,35 @@
         }, 1000);
       });
     }
-//Confetiiii
-  function triggerConfetti(){
-  const colors = ['#FFD700', '#FF6B6B', '#7FB3D5']; // citromsárga, fakópiros, fakókék
-  const confettiCount = 120;
 
-  for(let i=0;i<confettiCount;i++){
-    const c = document.createElement('div');
-    c.className = 'confetti';
-    c.style.background = colors[Math.floor(Math.random()*colors.length)];
-    c.style.animationDuration = (3 + Math.random()*2) + 's';
-    c.style.opacity = '1';
-    c.style.filter = 'brightness(1.3)';
+    function triggerConfetti(){
+      const colors = ['#FFD700', '#FF6B6B', '#7FB3D5'];
+      const confettiCount = 120;
 
-    const fromLeft = i < confettiCount / 2;
-    if(fromLeft){
-      c.style.left = '0';
-      c.style.bottom = '0';
-      c.style.setProperty('--xMove', (Math.random()*60 + 20) + 'vw');
-    } else {
-      c.style.right = '0';
-      c.style.bottom = '0';
-      c.style.setProperty('--xMove', '-' + (Math.random()*60 + 20) + 'vw');
+      for(let i=0;i<confettiCount;i++){
+        const c = document.createElement('div');
+        c.className = 'confetti';
+        c.style.background = colors[Math.floor(Math.random()*colors.length)];
+        c.style.animationDuration = (3 + Math.random()*2) + 's';
+        c.style.opacity = '1';
+        c.style.filter = 'brightness(1.3)';
+
+        const fromLeft = i < confettiCount / 2;
+        if(fromLeft){
+          c.style.left = '0';
+          c.style.bottom = '0';
+          c.style.setProperty('--xMove', (Math.random()*60 + 20) + 'vw');
+        } else {
+          c.style.right = '0';
+          c.style.bottom = '0';
+          c.style.setProperty('--xMove', '-' + (Math.random()*60 + 20) + 'vw');
+        }
+
+        c.style.setProperty('--yMove', '-' + (Math.random()*40 + 20) + 'vh');
+        document.body.appendChild(c);
+        setTimeout(()=>c.remove(), 5500);
+      }
     }
-
-    // indul felfelé, de a gravitáció lehúzza majd
-    c.style.setProperty('--yMove', '-' + (Math.random()*40 + 20) + 'vh');
-
-    document.body.appendChild(c);
-    setTimeout(()=>c.remove(), 5500);
-  }
-}
-
-
 
     function startIntro(){
       if(isPlaying) return;
